--- a/frontend/src/Components/LeagueTable/LeagueTable.module.scss
+++ b/frontend/src/Components/LeagueTable/LeagueTable.module.scss
@@ -13,11 +13,19 @@ $breakpoints: variables.$resolution-breakpoints;
 
     // font (inmporting mixin from variables)
     @include variables.Nanum-Gothic;
-    font-size: 85%;
+    font-size: 95%;
+    // font-size: 1rem;
+
+    // @include media("<=phone") {
+    //     width: 100%;
+    // }
+
 
     thead {
         background-color: variables.$background-colour;
         font-size: 85%;
+        // font-size: 0.7rem;
+
     }
 
     tbody tr {
@@ -56,14 +64,18 @@ $breakpoints: variables.$resolution-breakpoints;
                 }
 
                 &:nth-child(11) {
-                    width: 1.5rem;
+                    // width: 1.5rem;
+                    max-width: 1.5rem;
+                    min-width: 1.5rem;
                     // text-align: right;
                 }
             }
 
             @include media("<=phone") {
-                padding: 0.75rem 0.35rem;
+                padding: 0.75rem 0.3rem;
                 font-size: 85%;
+                // font-size: 0.8rem;
+
 
                 // max&min width for S U N D
                 &:nth-child(7),
@@ -87,11 +99,23 @@ $breakpoints: variables.$resolution-breakpoints;
             }
 
 
-            &:nth-child(5) {
-                text-align: left;
-                width: 25rem;
-                // max-width: 4.1rem;
+            @include media(">phone") {
+                &:nth-child(5) {
+                    text-align: left;
+                    // width: 25rem;
+                    max-width: 25rem;
+                    min-width: 25rem;
+                }
             }
+
+            @include media("<=phone") {
+                &:nth-child(5) {
+                    text-align: left;
+                    width: 100%;
+                    // overflow: hidden;
+                }
+            }
+
 
             // position column width
             &:nth-child(2) {
@@ -113,7 +137,8 @@ $breakpoints: variables.$resolution-breakpoints;
             padding: 0;
         }
 
-        .colUCL, .colUP {
+        .colUCL,
+        .colUP {
             background-color: variables.$ucl-colour;
         }
 
@@ -124,55 +149,15 @@ $breakpoints: variables.$resolution-breakpoints;
         .colUECL {
             background-color: variables.$uecl-colour;
         }
-        
-        .colRELUP, .colRELDOWN {
+
+        .colRELUP,
+        .colRELDOWN {
             background-color: variables.$rel-colour;
         }
 
         .colDOWN {
             background-color: variables.$down-colour;
         }
-
-        // // ucl
-        // &:nth-child(1),
-        // &:nth-child(2),
-        // &:nth-child(3),
-        // &:nth-child(4) {
-        //     .colouredCell {
-        //         background-color: variables.$ucl-colour;
-        //     }
-        // }
-
-        // // uel
-        // &:nth-child(5) {
-        //     .colouredCell {
-        //         background-color: variables.$uel-colour;
-        //     }
-        // }
-
-        // // uecl
-        // &:nth-child(6) {
-        //     .colouredCell {
-        //         background-color: variables.$uecl-colour;
-        //     }
-        // }
-
-        // // relpo
-        // &:nth-child(16) {
-        //     .colouredCell {
-        //         background-color: variables.$relpo-colour;
-        //     }
-        // }
-
-        // // rel
-        // &:nth-child(17),
-        // &:nth-child(18) {
-        //     .colouredCell {
-        //         background-color: variables.$rel-colour;
-        //     }
-        // }
-
-
         // arrow colours
         .colourPos svg {
             color: variables.$positive-colour;
@@ -189,7 +174,7 @@ $breakpoints: variables.$resolution-breakpoints;
 
         // team icons
         .teamIcons {
-            padding: 0.3rem 0.125rem 0.3rem;
+            padding: 0.5rem 0.125rem 0.2rem;
             // justify-content: center;
             // margin-top: 1rem;
             display: flex;
